data/derived/sp14/progs/unify/prog4555.ml.out
Characters 98-104:
  | 0 -> buildX
         ^^^^^^
Error: This expression has type unit -> expr
       but an expression was expected of type unit
